# serial

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake_linux_gcc_64bit.yml  cmake_macos.yml  cmake_windows_MSVC.yml  cmake_windows_mingw-w64.yml
doc/: Doxyfile  serial.dox
examples/: serial_example.cpp
include/serial/: serial.hpp
include/serial/impl/: unix.hpp  win.hpp
src/: serial.cpp
src/impl/: unix.cpp  win.cpp
src/impl/list_ports/: list_ports_linux.cpp  list_ports_win.cpp
